--- a/myproject/myapp/templates/myapp/home.html
+++ b/myproject/myapp/templates/myapp/home.html
@@ -15,7 +15,7 @@
         {% for article in articles %}
             <li>
                 <h3>{{ article.title }}</h3>
-                <p>{{ article.content }}</p>
+                <p>{{ article.content|safe }}</p>
                 <p>Published on: {{ article.published_date }}</p>
             </li>
         {% endfor %}
