changing teams to teams participating

--- a/myproject/myapp/templates/myapp/tournaments.html
+++ b/myproject/myapp/templates/myapp/tournaments.html
@@ -11,7 +11,7 @@
                 <h2>{{ tournament.name }}</h2>
                 <p>Date: {{ tournament.date }}</p>
                 <p>Prize Pool: {{ tournament.prize_pool }} $</p>
-                <h3>Teams</h3>
+                <h3>Teams participating</h3>
                 <ul>
                     {% for team in tournament.teams.all %}
                         <li>{{ team.name }}</li>
